[package]
name = "rsa-vdf"
version = "0.0.1"
edition = "2018"
description = "Verifiable Delay Function (Wesolowski 18)"
authors = [
    "Omer <omer.shlomovits@gmail.com>",
]
repository = "https://github.com/ZenGo-X/vdf"

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9.1"
hex = "0.4.2"

[dependencies.curv]
package = "curv"
git = "https://github.com/ZenGo-X/curv"
tag = "v0.7.0"
version = "0.7"

[features]
